releases/1.38.1/README.md
# Backstage Release 1.38.1

## Compared to 1.38.0 (previous patch release)

0 added, 0 removed, 4 upgraded, 179 unchanged.

### Version bumps

| Package | 1.38.0 | 1.38.1 | Type |
| --- | --- | --- | --- |
| `@backstage/canon` | 0.3.0 | 0.3.1 | Patch |
| `@backstage/plugin-scaffolder` | 1.30.0 | 1.30.1 | Patch |
| `@backstage/plugin-scaffolder-backend` | 1.32.0 | 1.32.1 | Patch |
| `@backstage/plugin-scaffolder-react` | 1.15.0 | 1.15.1 | Patch |

## Compared to 1.37.1 (previous minor release)

4 added, 0 removed, 154 upgraded (⚠️ need extra attention: 10 0.x minor, 3 0.0.x patch), 25 unchanged.

### 🆕 Added packages

| Package | Version |
| --- | --- |
| `@backstage/frontend-dynamic-feature-loader` | 0.1.0 |
| `@backstage/plugin-events-backend-module-bitbucket-server` | 0.1.0 |
| `@backstage/plugin-gateway-backend` | 1.0.0 |
| `@backstage/plugin-notifications-backend-module-slack` | 0.1.0 |

### Version bumps

| Package | 1.37.1 | 1.38.1 | Type |
| --- | --- | --- | --- |
| `@backstage/app-defaults` | 1.6.0 | 1.6.1 | Patch |
| `@backstage/backend-app-api` | 1.2.1 | 1.2.2 | Patch |
| `@backstage/backend-defaults` | 0.8.2 | 0.9.0 | Minor ⚠️ |
| `@backstage/backend-dynamic-feature-service` | 0.6.1 | 0.6.2 | Patch |
| `@backstage/backend-openapi-utils` | 0.5.1 | 0.5.2 | Patch |
| `@backstage/backend-plugin-api` | 1.2.1 | 1.3.0 | Minor |
| `@backstage/backend-test-utils` | 1.3.1 | 1.4.0 | Minor |
| `@backstage/canon` | 0.2.0 | 0.3.1 | Minor ⚠️ |
| `@backstage/cli` | 0.31.1 | 0.32.0 | Minor ⚠️ |
| `@backstage/core-app-api` | 1.16.0 | 1.16.1 | Patch |
| `@backstage/core-compat-api` | 0.4.0 | 0.4.1 | Patch |
| `@backstage/core-components` | 0.17.0 | 0.17.1 | Patch |
| `@backstage/core-plugin-api` | 1.10.5 | 1.10.6 | Patch |
| `@backstage/create-app` | 0.6.0 | 0.6.1 | Patch |
| `@backstage/dev-utils` | 1.1.8 | 1.1.9 | Patch |
| `@backstage/frontend-app-api` | 0.11.0 | 0.11.1 | Patch |
| `@backstage/frontend-defaults` | 0.2.0 | 0.2.1 | Patch |
| `@backstage/frontend-plugin-api` | 0.10.0 | 0.10.1 | Patch |
| `@backstage/frontend-test-utils` | 0.3.0 | 0.3.1 | Patch |
| `@backstage/integration` | 1.16.2 | 1.16.3 | Patch |
| `@backstage/integration-react` | 1.2.5 | 1.2.6 | Patch |
| `@backstage/plugin-api-docs` | 0.12.5 | 0.12.6 | Patch |
| `@backstage/plugin-api-docs-module-protoc-gen-doc` | 0.1.9 | 0.1.10 | Patch |
| `@backstage/plugin-app` | 0.1.7 | 0.1.8 | Patch |
| `@backstage/plugin-app-backend` | 0.5.0 | 0.5.1 | Patch |
| `@backstage/plugin-app-node` | 0.1.31 | 0.1.32 | Patch |
| `@backstage/plugin-app-visualizer` | 0.1.17 | 0.1.18 | Patch |
| `@backstage/plugin-auth-backend` | 0.24.4 | 0.24.5 | Patch |
| `@backstage/plugin-auth-backend-module-atlassian-provider` | 0.4.1 | 0.4.2 | Patch |
| `@backstage/plugin-auth-backend-module-auth0-provider` | 0.2.1 | 0.2.2 | Patch |
| `@backstage/plugin-auth-backend-module-aws-alb-provider` | 0.4.1 | 0.4.2 | Patch |
| `@backstage/plugin-auth-backend-module-azure-easyauth-provider` | 0.2.6 | 0.2.7 | Patch |
| `@backstage/plugin-auth-backend-module-bitbucket-provider` | 0.3.1 | 0.3.2 | Patch |
| `@backstage/plugin-auth-backend-module-bitbucket-server-provider` | 0.2.1 | 0.2.2 | Patch |
| `@backstage/plugin-auth-backend-module-cloudflare-access-provider` | 0.4.1 | 0.4.2 | Patch |
| `@backstage/plugin-auth-backend-module-gcp-iap-provider` | 0.4.1 | 0.4.2 | Patch |
| `@backstage/plugin-auth-backend-module-github-provider` | 0.3.1 | 0.3.2 | Patch |
| `@backstage/plugin-auth-backend-module-gitlab-provider` | 0.3.1 | 0.3.2 | Patch |
| `@backstage/plugin-auth-backend-module-google-provider` | 0.3.1 | 0.3.2 | Patch |
| `@backstage/plugin-auth-backend-module-guest-provider` | 0.2.6 | 0.2.7 | Patch |
| `@backstage/plugin-auth-backend-module-microsoft-provider` | 0.3.1 | 0.3.2 | Patch |
| `@backstage/plugin-auth-backend-module-oauth2-provider` | 0.4.1 | 0.4.2 | Patch |
| `@backstage/plugin-auth-backend-module-oauth2-proxy-provider` | 0.2.6 | 0.2.7 | Patch |
| `@backstage/plugin-auth-backend-module-oidc-provider` | 0.4.1 | 0.4.2 | Patch |
| `@backstage/plugin-auth-backend-module-okta-provider` | 0.2.1 | 0.2.2 | Patch |
| `@backstage/plugin-auth-backend-module-onelogin-provider` | 0.3.1 | 0.3.2 | Patch |
| `@backstage/plugin-auth-backend-module-pinniped-provider` | 0.3.1 | 0.3.2 | Patch |
| `@backstage/plugin-auth-backend-module-vmware-cloud-provider` | 0.5.1 | 0.5.2 | Patch |
| `@backstage/plugin-auth-node` | 0.6.1 | 0.6.2 | Patch |
| `@backstage/plugin-auth-react` | 0.1.13 | 0.1.14 | Patch |
| `@backstage/plugin-bitbucket-cloud-common` | 0.2.28 | 0.2.29 | Patch |
| `@backstage/plugin-catalog` | 1.28.0 | 1.29.0 | Minor |
| `@backstage/plugin-catalog-backend` | 1.32.0 | 1.32.1 | Patch |
| `@backstage/plugin-catalog-backend-module-aws` | 0.4.9 | 0.4.10 | Patch |
| `@backstage/plugin-catalog-backend-module-azure` | 0.3.3 | 0.3.4 | Patch |
| `@backstage/plugin-catalog-backend-module-backstage-openapi` | 0.5.0 | 0.5.1 | Patch |
| `@backstage/plugin-catalog-backend-module-bitbucket-cloud` | 0.4.6 | 0.4.7 | Patch |
| `@backstage/plugin-catalog-backend-module-bitbucket-server` | 0.3.3 | 0.4.0 | Minor ⚠️ |
| `@backstage/plugin-catalog-backend-module-gcp` | 0.3.6 | 0.3.7 | Patch |
| `@backstage/plugin-catalog-backend-module-gerrit` | 0.3.0 | 0.3.1 | Patch |
| `@backstage/plugin-catalog-backend-module-github` | 0.7.11 | 0.8.0 | Minor ⚠️ |
| `@backstage/plugin-catalog-backend-module-github-org` | 0.3.8 | 0.3.9 | Patch |
| `@backstage/plugin-catalog-backend-module-gitlab` | 0.6.4 | 0.6.5 | Patch |
| `@backstage/plugin-catalog-backend-module-gitlab-org` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-catalog-backend-module-incremental-ingestion` | 0.6.4 | 0.6.5 | Patch |
| `@backstage/plugin-catalog-backend-module-ldap` | 0.11.3 | 0.11.4 | Patch |
| `@backstage/plugin-catalog-backend-module-logs` | 0.1.8 | 0.1.9 | Patch |
| `@backstage/plugin-catalog-backend-module-msgraph` | 0.6.8 | 0.6.9 | Patch |
| `@backstage/plugin-catalog-backend-module-openapi` | 0.2.8 | 0.2.9 | Patch |
| `@backstage/plugin-catalog-backend-module-puppetdb` | 0.2.8 | 0.2.9 | Patch |
| `@backstage/plugin-catalog-backend-module-scaffolder-entity-model` | 0.2.6 | 0.2.7 | Patch |
| `@backstage/plugin-catalog-backend-module-unprocessed` | 0.5.6 | 0.5.7 | Patch |
| `@backstage/plugin-catalog-graph` | 0.4.17 | 0.4.18 | Patch |
| `@backstage/plugin-catalog-import` | 0.12.12 | 0.12.13 | Patch |
| `@backstage/plugin-catalog-node` | 1.16.2 | 1.16.3 | Patch |
| `@backstage/plugin-catalog-react` | 1.16.0 | 1.17.0 | Minor |
| `@backstage/plugin-catalog-unprocessed-entities` | 0.2.15 | 0.2.16 | Patch |
| `@backstage/plugin-config-schema` | 0.1.66 | 0.1.67 | Patch |
| `@backstage/plugin-devtools` | 0.1.25 | 0.1.26 | Patch |
| `@backstage/plugin-devtools-backend` | 0.5.3 | 0.5.4 | Patch |
| `@backstage/plugin-events-backend` | 0.5.0 | 0.5.1 | Patch |
| `@backstage/plugin-events-backend-module-aws-sqs` | 0.4.9 | 0.4.10 | Patch |
| `@backstage/plugin-events-backend-module-azure` | 0.2.18 | 0.2.19 | Patch |
| `@backstage/plugin-events-backend-module-bitbucket-cloud` | 0.2.18 | 0.2.19 | Patch |
| `@backstage/plugin-events-backend-module-gerrit` | 0.2.18 | 0.2.19 | Patch |
| `@backstage/plugin-events-backend-module-github` | 0.2.18 | 0.3.0 | Minor ⚠️ |
| `@backstage/plugin-events-backend-module-gitlab` | 0.2.18 | 0.3.0 | Minor ⚠️ |
| `@backstage/plugin-events-backend-test-utils` | 0.1.42 | 0.1.43 | Patch |
| `@backstage/plugin-events-node` | 0.4.9 | 0.4.10 | Patch |
| `@backstage/plugin-home` | 0.8.6 | 0.8.7 | Patch |
| `@backstage/plugin-home-react` | 0.1.24 | 0.1.25 | Patch |
| `@backstage/plugin-kubernetes` | 0.12.5 | 0.12.6 | Patch |
| `@backstage/plugin-kubernetes-backend` | 0.19.4 | 0.19.5 | Patch |
| `@backstage/plugin-kubernetes-cluster` | 0.0.23 | 0.0.24 | Patch ⚠️ |
| `@backstage/plugin-kubernetes-node` | 0.2.4 | 0.2.5 | Patch |
| `@backstage/plugin-kubernetes-react` | 0.5.5 | 0.5.6 | Patch |
| `@backstage/plugin-notifications` | 0.5.3 | 0.5.4 | Patch |
| `@backstage/plugin-notifications-backend` | 0.5.4 | 0.5.5 | Patch |
| `@backstage/plugin-notifications-backend-module-email` | 0.3.7 | 0.3.8 | Patch |
| `@backstage/plugin-notifications-node` | 0.2.13 | 0.2.14 | Patch |
| `@backstage/plugin-org` | 0.6.37 | 0.6.38 | Patch |
| `@backstage/plugin-org-react` | 0.1.36 | 0.1.37 | Patch |
| `@backstage/plugin-permission-backend` | 0.5.55 | 0.6.0 | Minor ⚠️ |
| `@backstage/plugin-permission-backend-module-allow-all-policy` | 0.2.6 | 0.2.7 | Patch |
| `@backstage/plugin-permission-node` | 0.9.0 | 0.9.1 | Patch |
| `@backstage/plugin-permission-react` | 0.4.32 | 0.4.33 | Patch |
| `@backstage/plugin-proxy-backend` | 0.6.0 | 0.6.1 | Patch |
| `@backstage/plugin-proxy-node` | 0.1.2 | 0.1.3 | Patch |
| `@backstage/plugin-scaffolder` | 1.29.0 | 1.30.1 | Minor |
| `@backstage/plugin-scaffolder-backend` | 1.31.0 | 1.32.1 | Minor |
| `@backstage/plugin-scaffolder-backend-module-azure` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-bitbucket` | 0.3.8 | 0.3.9 | Patch |
| `@backstage/plugin-scaffolder-backend-module-bitbucket-cloud` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-bitbucket-server` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-confluence-to-markdown` | 0.3.7 | 0.3.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-cookiecutter` | 0.3.8 | 0.3.9 | Patch |
| `@backstage/plugin-scaffolder-backend-module-gcp` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-gerrit` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-gitea` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-github` | 0.6.1 | 0.7.0 | Minor ⚠️ |
| `@backstage/plugin-scaffolder-backend-module-gitlab` | 0.8.1 | 0.9.0 | Minor ⚠️ |
| `@backstage/plugin-scaffolder-backend-module-notifications` | 0.1.8 | 0.1.9 | Patch |
| `@backstage/plugin-scaffolder-backend-module-rails` | 0.5.7 | 0.5.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-sentry` | 0.2.7 | 0.2.8 | Patch |
| `@backstage/plugin-scaffolder-backend-module-yeoman` | 0.4.8 | 0.4.9 | Patch |
| `@backstage/plugin-scaffolder-node` | 0.8.0 | 0.8.1 | Patch |
| `@backstage/plugin-scaffolder-node-test-utils` | 0.2.0 | 0.2.1 | Patch |
| `@backstage/plugin-scaffolder-react` | 1.14.6 | 1.15.1 | Minor |
| `@backstage/plugin-search` | 1.4.24 | 1.4.25 | Patch |
| `@backstage/plugin-search-backend` | 2.0.0 | 2.0.1 | Patch |
| `@backstage/plugin-search-backend-module-catalog` | 0.3.2 | 0.3.3 | Patch |
| `@backstage/plugin-search-backend-module-elasticsearch` | 1.7.0 | 1.7.1 | Patch |
| `@backstage/plugin-search-backend-module-explore` | 0.3.0 | 0.3.1 | Patch |
| `@backstage/plugin-search-backend-module-pg` | 0.5.42 | 0.5.43 | Patch |
| `@backstage/plugin-search-backend-module-stack-overflow-collator` | 0.3.7 | 0.3.8 | Patch |
| `@backstage/plugin-search-backend-module-techdocs` | 0.4.0 | 0.4.1 | Patch |
| `@backstage/plugin-search-backend-node` | 1.3.9 | 1.3.10 | Patch |
| `@backstage/plugin-search-react` | 1.8.7 | 1.8.8 | Patch |
| `@backstage/plugin-signals` | 0.0.17 | 0.0.18 | Patch ⚠️ |
| `@backstage/plugin-signals-backend` | 0.3.2 | 0.3.3 | Patch |
| `@backstage/plugin-signals-node` | 0.1.18 | 0.1.19 | Patch |
| `@backstage/plugin-signals-react` | 0.0.11 | 0.0.12 | Patch ⚠️ |
| `@backstage/plugin-techdocs` | 1.12.4 | 1.12.5 | Patch |
| `@backstage/plugin-techdocs-addons-test-utils` | 1.0.46 | 1.0.47 | Patch |
| `@backstage/plugin-techdocs-backend` | 2.0.0 | 2.0.1 | Patch |
| `@backstage/plugin-techdocs-module-addons-contrib` | 1.1.22 | 1.1.23 | Patch |
| `@backstage/plugin-techdocs-node` | 1.13.1 | 1.13.2 | Patch |
| `@backstage/plugin-techdocs-react` | 1.2.15 | 1.2.16 | Patch |
| `@backstage/plugin-user-settings` | 0.8.20 | 0.8.21 | Patch |
| `@backstage/plugin-user-settings-backend` | 0.3.0 | 0.3.1 | Patch |
| `@backstage/repo-tools` | 0.13.1 | 0.13.2 | Patch |
| `@backstage/test-utils` | 1.7.6 | 1.7.7 | Patch |
| `@backstage/theme` | 0.6.4 | 0.6.5 | Patch |
| `@techdocs/cli` | 1.9.1 | 1.9.2 | Patch |
